tests/NormalTests/paczka2/big_fuzzy/80513013.err
Error in line 3: SER0MwM9 S138 86,50
Error in line 12: 00AjazBPimU S138 69,4
Error in line 21: SER0MwM9 S138 262,3
Error in line 24: SER0MwM9 A746 82,9
Error in line 34: E5UA2b8fTib S952 56,8
Error in line 33: rfcd1FGwWZN S952 28,5
Error in line 39: owNKY S952 18,6
Error in line 54: CBVJRuA S138 32,0
Error in line 71: 00AjazBPimU S138 41,0
Error in line 61: rfcd1FGwWZN A746 85,5
Error in line 76: rfcd1FGwWZN S138 46,2
Error in line 68: owNKY S952 71,0
Error in line 74: 00AjazBPimU A746 96,4
Error in line 87: 00AjazBPimU S82 27,4
Error in line 69: S82 S138 6,3
Error in line 73: SER0MwM9 S82 56,1
Error in line 92: CBVJRuA S82 8,5
Error in line 109: rfcd1FGwWZN A746 56,1
Error in line 111: rfcd1FGwWZN S82 47,0
Error in line 116: S82 A746 82,3
Error in line 131: CBVJRuA A746 57,6
Error in line 125: rfcd1FGwWZN A746 945,1
Error in line 130: owNKY S952 56,2
Error in line 134: CBVJRuA S952 35,3
Error in line 140: CBVJRuA S82 93,9
Error in line 128: 00AjazBPimU A746 46,1
Error in line 150: 00AjazBPimU S82 18,0
Error in line 153: 00AjazBPimU S138 30,1
Error in line 155: 00AjazBPimU S952 77,6
Error in line 157: 00AjazBPimU S82 53,1
Error in line 159: 00AjazBPimU S138 70,5
Error in line 166: 00AjazBPimU S952 89,2
Error in line 165: E5UA2b8fTib S82 64,8
Error in line 183: E5UA2b8fTib S952 34,3
Error in line 182: S82 A746 94,1
Error in line 193: E5UA2b8fTib A746 75,8
Error in line 194: E5UA2b8fTib S952 28,7
Error in line 175: CBVJRuA S82 111,1
Error in line 205: CBVJRuA S952 11,1
Error in line 199: SER0MwM9 A746 30,3
Error in line 206: rfcd1FGwWZN S82 15,8
Error in line 226: E5UA2b8fTib S82 90,8
Error in line 232: E5UA2b8fTib S952 46,4
Error in line 236: SER0MwM9 S138 11,1
Error in line 239: SER0MwM9 S82 6,1
